Fix tap target spacing for checkbox and radio buttons need to have 16px min spacing as per spec

--- a/modules/system/assets/ui/storm.css
+++ b/modules/system/assets/ui/storm.css
@@ -3705,7 +3705,7 @@ input[type="search"] {-webkit-appearance:none}
 input[type="date"] {line-height:38px}
 .form-group {margin-bottom:15px}
 .radio,
-.checkbox {display:block;min-height:20px;margin-top:10px;margin-bottom:10px;padding-left:20px}
+.checkbox {display:block;min-height:20px;margin-top:10px;margin-bottom:16px;padding-left:20px}
 .radio label,
 .checkbox label {display:inline;font-weight:normal;cursor:pointer}
 .radio input[type="radio"],
